// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en >GitGrid debe de mostrar items cuando se cargan las imagines de useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    One Punch
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="mi title"
      url="https://localsf/pfoot.jpg"
    />
  </div>
</Fragment>
`;

exports[`pruebas en >GitGrid should de mostrarse correctament 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    One Punch
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
